--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -28,7 +28,18 @@
     </androidx.core.widget.NestedScrollView>
 
 
-
+    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+        android:id="@+id/add_post_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:icon="@drawable/ic_add"
+        app:iconTint="@color/white"
+        android:text="@string/add_post"
+        android:textColor="@color/white"
+        android:layout_marginBottom="@dimen/edit_text_margin_top"
+        android:layout_marginEnd="@dimen/edit_text_margin_top"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
