--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -28,8 +28,9 @@
                 android:id="@+id/register_illustrator"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/vector_illustrator_height"
-                android:background="@drawable/register_illustration"
-                app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+                android:src="@drawable/register_illustration"
+                app:layout_constraintTop_toBottomOf="@+id/toolbar"
+                />
 
             <TextView
                 android:id="@+id/textView"
