update: -registration full complete. -homepage data load complete. -splash screen
by: Forhadul

--- a/app/src/main/res/layout/item_card.xml
+++ b/app/src/main/res/layout/item_card.xml
@@ -10,7 +10,7 @@
         android:id="@+id/item_image"
         android:layout_width="@dimen/_120sdp"
         android:layout_height="@dimen/_120sdp"
-        android:src="@drawable/sample_book"
+        android:src="@drawable/placeholder"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -48,7 +48,6 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/author"
-        android:textColor="@color/primary"
         android:textSize="@dimen/item_sub_title_text_size"
         app:layout_constraintEnd_toEndOf="@+id/item_title"
         app:layout_constraintStart_toStartOf="@+id/item_title"
@@ -59,7 +58,6 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/price"
-        android:textColor="@color/primary"
         android:textSize="@dimen/price_text_size"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/author_name"
