--- a/app/src/main/res/layout/activity_add_post.xml
+++ b/app/src/main/res/layout/activity_add_post.xml
@@ -12,7 +12,7 @@
         android:layout_height="?android:attr/actionBarSize"
         app:layout_constraintTop_toTopOf="parent"
         app:navigationIcon="@drawable/ic_arrow_back"
-        app:title="Add post" />
+        app:title="Add book" />
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
