--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -12,7 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="?android:attr/actionBarSize"
         app:layout_constraintTop_toTopOf="parent"
-        app:navigationIcon="@drawable/ic_arrow_back" />
+        app:navigationIcon="@drawable/ic_arrow_back"
+        app:title="@string/sign_up" />
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -24,21 +25,30 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-            <ImageView
-                android:id="@+id/register_illustrator"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/vector_illustrator_height"
-                android:src="@drawable/register_illustration"
-                app:layout_constraintTop_toBottomOf="@+id/toolbar"
-                />
 
-            <TextView
+            <FrameLayout
+                android:layout_width="@dimen/_150sdp"
+                android:layout_height="@dimen/_150sdp"
+                android:layout_gravity="center"
+                android:layout_marginTop="@dimen/item_margin_top">
+                <ImageView
+                    android:id="@+id/register_illustrator"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:src="@drawable/add_image"
+                    android:padding="@dimen/_14sdp"
+                    android:background="@drawable/rounded_imageview_back"/>
+            </FrameLayout>
+
+
+            <!--<TextView
                 android:id="@+id/textView"
                 style="@style/TextHeadLine"
                 android:text="@string/sign_up"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/register_illustrator" />
+                app:layout_constraintTop_toBottomOf="@+id/register_illustrator" />-->
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -238,9 +248,9 @@
                         android:background="@color/white"
                         android:clickable="true"
                         android:focusable="false"
-                        android:imeOptions="actionDone"
-                        android:inputType="textPostalAddress"
                         android:hint="@string/address"
+                        android:imeOptions="actionDone"
+
                         />
                 </com.google.android.material.textfield.TextInputLayout>
             </LinearLayout>
@@ -289,7 +299,6 @@
             </LinearLayout>
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
