--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,13 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
             <include
                 android:id="@+id/old_book_store_items"
                 layout="@layout/items_layout"
@@ -22,8 +25,8 @@
                 layout="@layout/items_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@+id/old_book_store_items"
-                android:layout_marginTop="@dimen/_10sdp"/>
+                android:layout_marginTop="@dimen/_10sdp"
+                app:layout_constraintTop_toBottomOf="@+id/old_book_store_items" />
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
@@ -32,12 +35,13 @@
         android:id="@+id/add_post_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:icon="@drawable/ic_add"
-        app:iconTint="@color/white"
+        android:layout_marginEnd="@dimen/edit_text_margin_top"
+        android:layout_marginBottom="@dimen/edit_text_margin_top"
         android:text="@string/add_post"
         android:textColor="@color/white"
-        android:layout_marginBottom="@dimen/edit_text_margin_top"
-        android:layout_marginEnd="@dimen/edit_text_margin_top"
+        app:backgroundTint="@color/primary"
+        app:icon="@drawable/ic_add"
+        app:iconTint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
