--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -10,4 +10,17 @@
         android:name="com.fitareq.oldbookstore.ui.home.HomeFragment"
         android:label="fragment_home"
         tools:layout="@layout/fragment_home" />
+    <fragment
+        android:id="@+id/categoryFragment"
+        android:name="com.fitareq.oldbookstore.ui.category.CategoryFragment"
+        android:label="fragment_category"
+        tools:layout="@layout/fragment_category" />
+    <fragment
+        android:id="@+id/orderFragment"
+        android:name="com.fitareq.oldbookstore.ui.order.OrderFragment"
+        android:label="OrderFragment" />
+    <fragment
+        android:id="@+id/profileFragment"
+        android:name="com.fitareq.oldbookstore.ui.profile.ProfileFragment"
+        android:label="ProfileFragment" />
 </navigation>
