--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -27,21 +27,23 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_10sdp"
                 app:layout_constraintTop_toBottomOf="@+id/old_book_store_items" />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_50sdp"/>
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
 
-    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-        android:id="@+id/add_post_fab"
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/search_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/edit_text_margin_top"
-        android:layout_marginBottom="@dimen/edit_text_margin_top"
-        android:text="@string/add_post"
-        android:textColor="@color/white"
-        app:backgroundTint="@color/primary"
-        app:icon="@drawable/ic_add"
-        app:iconTint="@color/white"
+        android:layout_marginBottom="@dimen/_50sdp"
+        android:src="@drawable/ic_outline_search_24"
+        app:tint="@color/white"
+        app:maxImageSize="@dimen/_30sdp"
+        app:backgroundTint="@color/grey"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
