--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -1,15 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-<item android:title="Home"
-    android:icon="@drawable/ic_home"
-    android:id="@+id/nav_home"/>
-    <item android:title="Category"
+    <item
+        android:id="@+id/nav_home"
+        android:icon="@drawable/ic_home"
+        android:title="Home" />
+    <item
+        android:id="@+id/nav_category"
         android:icon="@drawable/ic_category"
-        android:id="@+id/nav_category"/>
-    <item android:title="Order"
+        android:title="Category" />
+    <item
+        android:id="@+id/nav_dumb"
+        android:title="Sale Book"
+        android:enabled="false"/>
+    <item
+        android:id="@+id/nav_order"
         android:icon="@drawable/ic_order"
-        android:id="@+id/nav_order"/>
-    <item android:title="Profile"
+        android:title="Order" />
+    <item
+        android:id="@+id/nav_profile"
         android:icon="@drawable/ic_profile"
-        android:id="@+id/nav_profile"/>
+        android:title="Profile" />
 </menu>
